# QLEE

./: .gitignore  Dockerfile  README.md  compile.py  main.py  spec.py
autostub/: CMakeLists.txt  README.md  main.cpp
common/: command.py  compilecommands.py  spec.py
examples/: autostub  run.sh  spec.yml
examples/16550A/: spec.yml  stubs.ll
examples/16550A/evaluation/with_constraints/serial_ioport_read/: assembly.ll  info  messages.txt  run.istats  run.stats  test000002.ktest  test000006.ktest  test000008.ktest  test000010.ktest  test000011.ktest  test000013.ktest  test000015.ktest  test000021.ktest  test000022.ktest  test000023.ktest  test000026.ktest  test000027.ktest  test000028.ktest  test000029.ktest  test000032.ktest  test000033.ktest  test000041.ktest  test000042.ktest  test000044.ktest  test000045.ktest  test000046.ktest  test000048.ktest  test000051.ktest  test000053.ktest  test000054.ktest  test000055.ktest  test000057.ktest  test000058.ktest  test000059.ktest  test000060.ktest  test000061.ktest  test000062.ktest  test000063.ktest  test000064.ktest  test000066.ktest  (+227 more)
examples/16550A/evaluation/with_constraints/serial_ioport_write/: assembly.ll  info  messages.txt  run.istats  run.stats-shm  run.stats-wal  test000004.ktest  test000005.ktest  test000006.ktest  test000009.ktest  test000010.ktest  test000013.ktest  test000015.ktest  test000019.ktest  test000020.ktest  test000021.ktest  (+685 more)
examples/avr_usart/: spec.yml  stubs.ll
examples/pl011/: run.sh  spec.yml  stubs.c  stubs.ll
ops/: compile.py  harness.py  klee.py  stubs.py
parse-struct/: CMakeLists.txt  README.md  parse-struct.cpp
(+1775 files in other folders)
